plugins/kotlin/idea/tests/testData/multiplatform/sealedInheritorsInComplexModuleStructure2/intermediate/intermediate.kt
package foo

actual sealed class <!LINE_MARKER("descr='Has expects in common module'"), LINE_MARKER("descr='Is subclassed by Derived12 Derived13Error  Click or press ... to navigate'")!>Sealed2<!> : Sealed1()

class Derived2 : Sealed1()
class Derived12 : Sealed2()
